Migrate to using monos for api calls (#3136)